--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ header {
     display: grid;
     grid-template-columns: repeat(2,1fr);
 }
+h1,
+h2 {
+    font-family: 'VolteRounded';
+}
 nav ul {
     display: flex;
     flex-direction: row;
