commit on master

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url(//db.onlinewebfonts.com/c/428912faef6cbf7a2c43c3952c8de813?family=VolteRounded);
+@import url('//db.onlinewebfonts.com/c/428912faef6cbf7a2c43c3952c8de813?family=VolteRounded');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap');
 body {
     background: rgb(29, 31, 58);
